--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,47 @@ body {
 /* ============================================================= 
     Home page css start
 ============================================================== */
+/*--------------------- dropdoun ------------------------------*/
+.dropbtn {
+   
+    color: black;
+    background-color: none;
+    border: none;
+    cursor: pointer;
+    width: 20px;
+}
 
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position:absolute;
+    margin-top: 45px;
+    margin-left: 11.5cm;
+    height: 5cm;
+    width:3cm;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+
+
+.show {
+    display: block;
+    
+}
+/*---------------------- dropdoun end -----------------*/
 
 /*----------------- Nav_bar css start -----------------*/
 
